[package]
authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
categories = ["cli"]
description = "CLI for the Selectel Managed Kubernetes Service."
readme = "README.md"
edition = "2018"
homepage = "https://github.com/ozerovandrei/selectel-mks-cli"
keywords = ["cli", "selectel", "mks", "kubernetes"]
license = "MIT OR Apache-2.0"
name = "selectel-mks-cli"
repository = "https://github.com/ozerovandrei/selectel-mks-cli.git"
version = "0.1.0"

[[bin]]
name = "mks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
selectel-mks = "0.2.2"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
term-table = "1.3"